# vldb26

./: Dockerfile  README.md  docker-build.sh  docker-run.sh  docker-test.sh  microbenchmark_algorithmic_impact_analysis.sh
baseline/benchmark/: CMakeLists.txt  benchmark.cpp  bm_bplus_with_cache.hpp  bm_bplus_with_cache_char16_char16.hpp  bm_bplus_with_cache_uint64_char16.hpp  bm_bplus_with_cache_uint64_uint64.hpp  common.h  csv_logger.hpp  profile_and_benchmark_bplus_with_cache.sh  workloadgenerator.hpp
optimized/benchmark/: .gitignore  CMakeLists.txt  benchmark.cpp  benchmark.vcxproj  bm_tree_with_cache.hpp  bm_tree_with_cache_bistorage.hpp  bm_tree_with_cache_bistorage_ycsb.hpp  bm_tree_with_cache_clean.hpp  bm_tree_with_cache_minimal.hpp  bm_tree_with_cache_real.hpp  bm_tree_with_cache_simple.hpp  bm_tree_with_cache_working.hpp  bm_tree_with_cache_ycsb.hpp  bm_tree_with_cache_ycsb_device_aware.hpp  bm_tree_with_no_cache.hpp  combine_benchmark_results.sh  common.h  compare_device_aware_vs_fixed.sh  compare_with_vmcache.sh  csv_logger.hpp  demo_device_aware_policy.sh  policy_selector_cli.cpp  process_cache_benchmark_data.py  profile_and_benchmark_tree_with_cache copy.sh  profile_and_benchmark_tree_with_cache.sh  profile_and_benchmark_tree_with_cache_debug.sh  profile_and_benchmark_tree_with_cache_debug_simple.sh  profile_and_benchmark_tree_with_cache_ycsb.sh  profile_and_benchmark_tree_with_cache_ycsb_cwe.sh  profile_and_benchmark_tree_with_nocache.sh  profile_cache_and_storage.sh  run_device_aware_ycsb.sh  run_gdb_debug.sh  run_threadsanitizer_analysis.sh  workloadgenerator.hpp  ycsbworkloadgenerator.hpp
optimized/libbtree/: BEpsilonStoreInMemory.hpp  BPlusStore - Copy.hpp  BPlusStore.hpp  BPlusStore.hpp.gch  BloomFilterAnalysis.hpp  CMakeLists.txt  DataNode.hpp  DataNodeCOpt.hpp  DataNodeCROpt.hpp  DataNodeROpt.hpp  ErrorCodes.h  IndexNode - Copy.hpp  IndexNode.hpp  IndexNodeCOpt.hpp  IndexNodeCROpt.hpp  IndexNodeROpt.hpp  OptimizedBloomFilter.hpp  PairedIterator.hpp  TypeUID.h  libbtree.vcxproj  pch.h
optimized/libcache/: A2QCache.hpp  A2QCache.hpp.orig  A2QCache.hpp.rej  A2QCacheObject.hpp  BiStorage.hpp  CLOCKCache - Copy (2).hpp  CLOCKCache - Copy (3).hpp  CLOCKCache - Copy (4).hpp  CLOCKCache - Copy.hpp  CLOCKCache - backup14july.hpp  CLOCKCache.hpp  CLOCKCacheObject.hpp  CMakeLists.txt  CacheErrorCodes.h  CacheObjectState.h  CacheStatsProvider.cpp  CacheStatsProvider.hpp  DeviceAwarePolicy.hpp  DualNodeStorage.hpp  DualNodeStorage_README.md  FileStorage - Copy.hpp  FileStorage copy.hpp  FileStorage.hpp  FileStorageIOURing.hpp  FileWAL.hpp  HybridStorage.hpp  IOURingStorage.hpp  LRUCache - Copy.hpp  LRUCache.hpp  LRUCache.hpp.orig  LRUCache.hpp.rej  LRUCacheObject - Copy.hpp  LRUCacheObject.hpp  MMapStorage.hpp  NoCache.hpp  NoCacheObject.hpp  ObjectFatUID.h  PMemStorage.hpp  PMemWAL.hpp  PolicyVariants.hpp  (+4 more)
optimized/sandbox/: CMakeLists.txt  benchmark_fptree.csv  benchmark_inmemory_wal.csv  benchmark_lbtree.csv  benchmark_pure_inmemory.csv  benchmark_results_merged.csv  benchmark_tlx.csv  final_test.csv  sandbox.cpp  sandbox.vcxproj  test_b_plus_and_epsilon_variants.cpp  visualization_options_summary.md
optimized/sandbox/nvm_plots/: nvm_io_summary.txt
optimized/sandbox/nvm_tracing_plots/: nvm_tracing_summary.txt
optimized/sandbox/nvm_tracking_data/: fptree_1000000_reads.txt  fptree_1000000_writes.txt  fptree_5000000_reads.txt  fptree_5000000_writes.txt  fptree_500000_reads.txt  fptree_500000_writes.txt  inmemory_wal_500000_writes.txt  lbtree_1000000_reads.txt  lbtree_1000000_writes.txt  lbtree_5000000_writes.txt  lbtree_500000_writes.txt
optimized/sandbox/nvm_tracking_plots/: nvm_analysis_report.txt
optimized/sandbox/nvm_traffic_plots/: nvm_traffic_analysis_report.txt
optimized/sandbox/practical_nvm_plots/: practical_nvm_analysis_report.txt
optimized/sandbox/vtune_nvm_fptree_10000/: vtune_nvm_fptree_10000.vtune
optimized/sandbox/vtune_nvm_fptree_10000/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
optimized/sandbox/vtune_nvm_fptree_10000/data.0/: map.events  system-wide.stat.perf  systemcollector-373925-bress145-14.sc  userapicollector-373945-fd9d07d0-373945-fda81aa8.th  userapicollector-373945-fd9d07d0-374226-fda0c6f0.th  userapicollector-373945-fd9d07d0.trace
optimized/sandbox/vtune_nvm_fptree_10000/data.0/system-wide.perf/: data  data.0  data.1  data.10  data.11  data.12  data.13  data.14  data.15  data.16  data.17  data.18  data.19  data.2  data.20  data.21  data.22  data.23  data.24  data.25  data.26  data.27  data.28  data.29  data.3  data.30  data.31  data.32  data.33  data.34  data.35  data.36  data.37  data.38  data.39  data.4  data.40  data.41  data.42  data.43  (+57 more)
optimized/sandbox/vtune_nvm_inmemory_wal_10000/: vtune_nvm_inmemory_wal_10000.vtune
optimized/sandbox/vtune_nvm_inmemory_wal_10000/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
optimized/sandbox/vtune_nvm_inmemory_wal_10000/data.0/: system-wide.stat.perf  systemcollector-374548-bress145-14.sc  userapicollector-374568-c35c1dc1-374568-c368ec40.th  userapicollector-374568-c35c1dc1-374736-c361c6b7.th  userapicollector-374568-c35c1dc1.trace
optimized/sandbox/vtune_nvm_lbtree_10000/: vtune_nvm_lbtree_10000.vtune
optimized/sandbox/vtune_nvm_lbtree_10000/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
optimized/sandbox/vtune_nvm_lbtree_10000/data.0/: perfcmd  system-wide.stat.perf  systemcollector-374295-bress145-14.sc  userapicollector-374315-e529dcf7-374315-e536e941.th  userapicollector-374315-e529dcf7-374483-e52ef89b.th  userapicollector-374315-e529dcf7.trace
optimized/sandbox/vtune_nvm_results/fptree_10000_memory/: fptree_10000_memory.vtune
optimized/sandbox/vtune_results/: fptree_100000_report.txt  fptree_10000_report.txt  lbtree_100000_report.txt
optimized/sandbox/vtune_results/fptree_10000/: fptree_10000.vtune
optimized/sandbox/vtune_results/fptree_100000/: fptree_100000.vtune
optimized/sandbox/vtune_results/lbtree_100000/: lbtree_100000.vtune
(+735 files in other folders)
